k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-project
  labels:
    app.kubernetes.io/name: devops-project
    app.kubernetes.io/part-of: 3-tier-application
