k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  namespace: devops-project
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "90"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-svc
                port:
                  number: 5000
          - path: /health
            pathType: Exact
            backend:
              service:
                name: api-svc
                port:
                  number: 5000
          - path: /metrics
            pathType: Exact
            backend:
              service:
                name: api-svc
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-svc
                port:
                  number: 80
